<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <com.my.spyware.widget.ItemHeadLayout
            android:id="@+id/head"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0" />

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.0"
            android:visibility="gone" />

        <RadioGroup
            android:id="@+id/main_tab"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_gravity="bottom|center"
            android:background="@drawable/tab_back"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/rbtn_friend"
                style="@style/tabbar_itembase"
                android:text="@string/friend" />

            <RadioButton
                android:id="@+id/rbtn_home"
                style="@style/tabbar_itembase"
                android:checked="true"
                android:text="@string/home" />

            <RadioButton
                android:id="@+id/rbtn_set"
                style="@style/tabbar_itembase"
                android:text="@string/set" />
        </RadioGroup>
    </LinearLayout>

</TabHost>