<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e6e6e6"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <com.my.spyware.widget.ItemHeadLayout
        android:id="@+id/head"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/bg_frame"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:digits="@string/input_rule"
                    android:drawableLeft="@drawable/ico_login_user"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:hint="@string/login_name"
                    android:paddingLeft="16dp"
                    android:textColor="#505050"
                    android:textColorHint="#bcbcbc" >

                    <requestFocus />
                </EditText>

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/line_login" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:digits="@string/input_rule"
                    android:drawableLeft="@drawable/ico_login_password"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:hint="@string/login_password"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:paddingLeft="16dp"
                    android:textColor="#505050"
                    android:textColorHint="#bcbcbc" />

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/line_login" />

                <EditText
                    android:id="@+id/password_check"
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:digits="@string/input_rule"
                    android:drawableLeft="@drawable/ico_login_password"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:hint="@string/login_password_again"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:paddingLeft="16dp"
                    android:textColor="#505050"
                    android:textColorHint="#bcbcbc" />
                
                <EditText
                    android:id="@+id/edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:digits="@string/input_rule_email"
                    android:drawableLeft="@drawable/ico_login_password"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:hint="请输入常用邮箱"
                    android:inputType="textEmailAddress"
                    android:maxLength="16"
                    android:paddingLeft="16dp"
                    android:textColor="#505050"
                    android:textColorHint="#bcbcbc" />
            </LinearLayout>

            <Button
                android:id="@+id/bt_register"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/btn_login_blue"
                android:text="@string/register_sure"
                android:textColor="#ffffff"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>