<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <com.my.spyware.widget.ItemHeadLayout
        android:id="@+id/head"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#e6e6e6"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/li_edits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="11dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/bg_frame"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_weight="1"
                android:background="@null"
                android:digits="@string/input_rule"
                android:drawableLeft="@drawable/ico_login_user"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:hint="@string/login_name"
                android:paddingLeft="16dp"
                android:textColor="#505050"
                android:textColorHint="#bcbcbc" >

                <requestFocus />
            </EditText>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#e6e6e6" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_weight="1"
                android:background="@null"
                android:digits="@string/input_rule"
                android:drawableLeft="@drawable/ico_login_password"
                android:drawablePadding="10dp"
                android:ems="10"
                android:gravity="center_vertical"
                android:hint="@string/login_password"
                android:inputType="textPassword"
                android:maxLength="16"
                android:paddingLeft="16dp"
                android:textColor="#505050"
                android:textColorHint="#bcbcbc" />
        </LinearLayout>

        <Button
            android:id="@+id/bt_login"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/li_edits"
            android:layout_marginBottom="11dp"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="11dp"
            android:layout_marginTop="21dp"
            android:background="@drawable/btn_login_blue"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <RelativeLayout
            android:id="@+id/rel_btnforget"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bt_login"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:weightSum="2" >

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:padding="10dp"
                android:text="@string/register"
                android:textColor="#459fbe"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/tv_forget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:padding="10dp"
                android:text="@string/forget_pass"
                android:textColor="#459fbe"
                android:textSize="15dp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="26.67dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:text="@string/other"
                android:textColor="@color/writing_a"
                android:textSize="16sp" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal"
                android:paddingLeft="15dp"
                android:paddingRight="15dp" >

                <LinearLayout
                    android:id="@+id/llQQ"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_toLeftOf="@+id/line_de"
                    android:orientation="vertical" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/btn_login_qq" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/line_de"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/di_login"
                    android:visibility="gone" />

                <LinearLayout
                    android:id="@+id/llSina"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/line_de"
                    android:orientation="vertical" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/btn_login_xinlang"
                        android:visibility="gone" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>